--- a/projeto-websemantica/.settings/org.eclipse.wst.common.component
+++ b/projeto-websemantica/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,8 @@
     <wb-module deploy-name="projeto-websemantica">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="projeto-websemantica"/>
+        <wb-resource deploy-path="/WEB-INF/classes/" source-path="/ImportedClasses"/>
         <property name="java-output-path" value="/projeto-websemantica/build/classes"/>
+        <property name="context-root" value="projeto-websemantica"/>
     </wb-module>
 </project-modules>
