--- a/projeto-websemantica/WebContent/css/estilo.css
+++ b/projeto-websemantica/WebContent/css/estilo.css
@@ -1,14 +1,9 @@
-*{
-	margin : 0;
-	padding : 0;
+
+
+.tabela td{
+	border: 1px solid black;
 }
-body{
-	margin-left:0px;
-	margin-top:0px;
-	margin-right:0px;
-	margin-bottom:0px;
-	background-color:#ffffff;	
-}
+
 h1{
 	text-align:center;
 	color:#0445c9;
@@ -47,30 +42,19 @@ h1{
 	overflow:hidden; 
 }
 .secundario1{
-	height:220px;
+	height:320px;
 }
 .secundario2{
 	 position:absolute;
-	 z-index:10;
-	 line-height:1.2;
-	 margin:2px;
-	 top:0px;
-	 left:0px;
 	 width:478px;
-	 height:38px;
-	 word-wrap:break-word;
-	 overflow-y:auto;
-	 overflow-x:hidden;
 }
 span{
 	 font-family:Arial;
-	 font-size:23px;
+	 font-size:20px;
 	 font-weight:normal;
 	 color:#0445c9;
 }
-.span1{
-	padding-left:100px;
-}
+
 .span2{
 	font-size:14px;
 	color:#000000;
@@ -79,7 +63,6 @@ span{
 }
 .botao{
 	position:absolute;
-	left:520px;
 	width:130px;
 	height:30px;
 	cursor:pointer;
@@ -98,7 +81,7 @@ span{
 	position:static;
 	margin:0px;
 	padding:0px;
-	width:130px;
+	width:100%;
 	height:30px;
 	-moz-border-radius:4px;
 	border-radius:4px;
