--- a/projeto-websemantica/WebContent/css/estilo.css
+++ b/projeto-websemantica/WebContent/css/estilo.css
@@ -4,6 +4,10 @@
 	border: 1px solid black;
 }
 
+.align_center {
+	text-align: center;
+}
+
 h1{
 	text-align:center;
 	color:#0445c9;
@@ -35,18 +39,18 @@ h1{
 	z-index:10012;
 	left:335px;
 	top:240px;
-	width:480px;
+	width:500px;
 	height:70px;
 	border:0px;
 	background:rgba(0,0,0,0);
 	overflow:hidden; 
 }
 .secundario1{
-	height:320px;
+	height:400px;
 }
 .secundario2{
 	 position:absolute;
-	 width:478px;
+	 width:500px;
 }
 span{
 	 font-family:Arial;
@@ -81,7 +85,6 @@ span{
 	position:static;
 	margin:0px;
 	padding:0px;
-	width:100%;
 	height:30px;
 	-moz-border-radius:4px;
 	border-radius:4px;
