--- a/projeto-websemantica/WebContent/css/estilo.css
+++ b/projeto-websemantica/WebContent/css/estilo.css
@@ -69,8 +69,7 @@ span{
 	cursor:hand;
 }
 .botao{
-	position:absolute;
-	width:130px;
+	width:100%;
 	height:30px;
 	cursor:pointer;
 	text-decoration:none;
@@ -80,8 +79,7 @@ span{
 	top:380px;
 }
 .botaoSPO{
-	z-index:10000;
-	top:320px;
+	margin-top: 10px;
 }
 .btn{
 	overflow: hidden; 
